ordermanagement/kubernetes/ingress/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.25.1
          imagePullPolicy: IfNotPresent
          name: nginx-ingress
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-config
          ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
