ordermanagement/kubernetes/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ordermanagement-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
