ordermanagement/kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ordermanagement-ingress
  annotations:
  #  nginx.org/rewrites: "serviceName=customermanagement rewrite=/;serviceName=customerordermanagement rewrite=/api/"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://authenticationservice.default.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
#    nginx.com/jwt-key: "cafe-jwk"
#    nginx.com/jwt-login-url: "https://login.example.com"
spec:
  rules:
    - http:
        paths:
          - # path: /customermanagement/
            path: /customermanagement(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: customermanagement
              servicePort: 80
          - path: /customerordermanagement(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: customerordermanagement
              servicePort: 80
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: authenticationservice
              servicePort: 80
